--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: PanVizGenerator
 Type: Package
 Title: Generate PanViz visualisations from your pangenome
-Version: 0.3.0
-Date: 2014-11-24
+Version: 0.3.1
+Date: 2014-12-08
 Author: Thomas Lin Pedersen
 Maintainer: Thomas Lin Pedersen <thomasp85@gmail.com>
 Description: This package defines a GUI for generating PanViz visualisations
@@ -11,7 +11,8 @@ Description: This package defines a GUI for generating PanViz visualisations
     distance calculations and takes care of generating the required json files
     for the visualisation.
 License: GPL (>= 2)
-Import: shiny,
+Imports:
+    shiny,
     tools,
     jsonlite,
     pcaMethods
