--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: PanVizGenerator
 Type: Package
 Title: Generate PanViz visualisations from your pangenome
-Version: 0.5.1
-Date: 2015-10-28
+Version: 0.99.1
+Date: 2016-03-08
 Author: Thomas Lin Pedersen
 Maintainer: Thomas Lin Pedersen <thomasp85@gmail.com>
 Description: PanViz is a JavaScript based visualisation tool for functionaly
@@ -22,7 +22,9 @@ Imports:
     jsonlite,
     pcaMethods,
     FindMyFriends,
-    igraph
+    igraph,
+    stats,
+    utils
 VignetteBuilder: knitr
 Suggests:
     BiocStyle,
@@ -37,4 +39,4 @@ Collate:
     'panviz.R'
     'shinyStuff.R'
     'zzz.R'
-RoxygenNote: 5.0.0
+RoxygenNote: 5.0.1
