Fix possible NA in GO data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,5 +30,7 @@ importFrom(stats,cmdscale)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(tools,file_ext)
+importFrom(utils,browseURL)
 importFrom(utils,download.file)
+importFrom(utils,read.csv)
 importFrom(utils,zip)
